# nes-chr-editor

./: CMakeLists.txt
include/nes/: constants.h
src/: main.cpp  olc.cpp  version.h.in
src/editor/: application.cpp  application.h  model.cpp  model.h  palettespritecache.cpp  palettespritecache.h  style.h
src/editor/ui/: uielements.cpp  uielements.h  uimanager.cpp  uimanager.h
src/nes/: nesfile.cpp  nesfile.h  palette.h
